add my conf files and edit installer helpers

--- a/configs/hypr/hypridle.conf
+++ b/configs/hypr/hypridle.conf
@@ -6,8 +6,8 @@ general {
 
 listener {
     timeout = 60                                 # 1min.
-    on-timeout = brightnessctl -s set 5          # set monitor backlight to minimum, avoid 0 on OLED monitor.
-    on-resume = brightnessctl -r                 # monitor backlight restore.
+    on-timeout = brightnessctl set 6%             # set monitor backlight to minimum, avoid 0 on OLED monitor.
+    on-resume = brightnessctl set 100%           # monitor backlight restore.
 }
 
 listener {
@@ -22,6 +22,6 @@ listener {
 }
 
 listener {
-    timeout = 900                                # 30min
+    timeout = 900                                 # 30min
     on-timeout = systemctl suspend                # suspend pc
 }
