--- a/configs/hypr/hyprlock.conf
+++ b/configs/hypr/hyprlock.conf
@@ -1,10 +1,10 @@
 background {
-    monitor =
+    #monitor
     path = ~/.config/assets/backgrounds/cat_leaves_blurred.png # only png supported for now
 }
 
 input-field {
-    monitor =
+    #monitor
     size = 200, 50
     outline_thickness = 3
     dots_size = 0.33 # Scale of input-field height, 0.2 - 0.8
@@ -19,8 +19,8 @@ input-field {
     placeholder_text = <i>Input Password...</i> # Text rendered in the input box when it's empty.
     hide_input = false
     rounding = -1 # -1 means complete rounding (circle/oval)
-    check_color = rgb(204, 136, 34)
-    fail_color = rgb(204, 34, 34) # if authentication failed, changes outer_color and fail message color
+    check_color = rgb(cc8822)
+    fail_color = rgb(cc2222) # if authentication failed, changes outer_color and fail message color
     fail_text = <i>$FAIL <b>($ATTEMPTS)</b></i> # can be set to empty
     fail_transition = 100 # transition time in ms between normal outer_color and fail_color
     capslock_color = -1
@@ -34,9 +34,9 @@ input-field {
 }
 
 label {
-    monitor =
+    #monitor
     text = cmd[update:1000] echo "$TIME"
-    color = rgba(a6adc8)
+    color = rgb(a6adc8)
     font_size = 55
     font_family = Fira Semibold
     position = -100, 40
@@ -47,9 +47,9 @@ label {
 }
 
 label {
-    monitor =
+    #monitor
     text = Hello
-    color = rgba(a6adc8)
+    color = rgb(a6adc8)
     font_size = 20
     font_family = Fira Semibold
     position = -100, 160
@@ -60,7 +60,7 @@ label {
 }
 
 image {
-    monitor =
+    #monitor
     path = ~/.config/assets/backgrounds/cat_pacman.png
     size = 280 # lesser side if not 1:1 ratio
     rounding = -1 # negative values mean circle
@@ -68,7 +68,7 @@ image {
     border_color = rgb(a6adc8)
     rotate = 0 # degrees, counter-clockwise
     reload_time = -1 # seconds between reloading, 0 to reload with SIGUSR2
-#    reload_cmd =  # command to get new path. if empty, old path will be used. don't run "follow" commands like tail -F
+    reload_cmd # command to get new path. if empty, old path will be used. don't run "follow" commands like tail -F
     position = 0, 200
     halign = center
     valign = center
