--- a/configs/waybar/config.jsonc
+++ b/configs/waybar/config.jsonc
@@ -8,6 +8,7 @@
     "height": 0,
     "modules-left": [
         "clock",
+        "hyprland/language",
         "hyprland/workspaces"
     ],
     "modules-center": ["hyprland/window"],
@@ -25,6 +26,12 @@
     "hyprland/window": {
         "format": "󰣇 {}"
     },
+    "hyprland/language": {
+        "format": "{}",
+        "format-en": "US",
+        "format-uk": "UA",
+        "format-ru": "RU"
+    },
     
     "hyprland/workspaces": {
         "disable-scroll": true,
@@ -39,7 +46,7 @@
     },
 
     "clock": {
-        "format": "{:%A    %B-%d-%Y    %I:%M:%S %p}",
+        "format": "{:%A    %B-%d-%Y    %H:%M:%S}",
         "interval": 1,
         "rotate": 0,
         "tooltip-format": "<tt>{calendar}</tt>",
