--- a/configs/kitty/kitty.conf
+++ b/configs/kitty/kitty.conf
@@ -16,4 +16,16 @@ initial_window_height	28c
 window_padding_width	6
 confirm_os_window_close	-1
 
+# Tabs
+bell_on_tab		no
+tab_bar_edge		buttom
+tab_bar_align		left
+tab_bar_style		fade
+tab_bar_min_tabs	1
+tab_activity_symbol	none
+tab_bar_margin_width	0.0
+tab_bar_margin_height	0.0 0.0
+tab_title_template	"{fmt.fg.red}{bell_symbol}{activity_symbol}{fmt.fg.tab}{title}"
+active_tab_font_style	bold
+
 linux_display_server	x11
